--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 attrs==22.1.0
+greenlet==1.1.3.post0
 iniconfig==1.1.1
 packaging==21.3
 pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.9
 pytest==7.1.3
+SQLAlchemy==1.4.42
 tomli==2.0.1
