--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ anyio==3.6.2
 attrs==22.1.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
+click==8.1.3
 fastapi==0.85.1
 greenlet==1.1.3.post0
+h11==0.14.0
 idna==3.4
 iniconfig==1.1.1
 packaging==21.3
@@ -20,3 +22,4 @@ starlette==0.20.4
 tomli==2.0.1
 typing_extensions==4.4.0
 urllib3==1.26.12
+uvicorn==0.19.0
