--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ attrs==22.1.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
-fastapi==0.85.1
+fastapi==0.85.2
 greenlet==1.1.3.post0
 h11==0.14.0
+httptools==0.5.0
 idna==3.4
 iniconfig==1.1.1
 packaging==21.3
@@ -15,6 +16,7 @@ pydantic==1.10.2
 pyparsing==3.0.9
 pytest==7.1.3
 python-dotenv==0.21.0
+PyYAML==6.0
 requests==2.28.1
 sniffio==1.3.0
 SQLAlchemy==1.4.42
@@ -23,3 +25,6 @@ tomli==2.0.1
 typing_extensions==4.4.0
 urllib3==1.26.12
 uvicorn==0.19.0
+uvloop==0.17.0
+watchfiles==0.18.0
+websockets==10.4
