chapter_9: united service & handlers; integrate uow & messagebus; replaced primitives to event in service layer; refactor handlers (ex. service) tests

--- a/docker-compose-test.yaml
+++ b/docker-compose-test.yaml
@@ -46,3 +46,29 @@ services:
         reservations:
           cpus: '0.25'
           memory: 128M
+
+  # pytest container
+  pytest:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile-pytest
+    depends_on:
+      - api
+      - postgres
+    env_file:
+      - ./.env
+    environment:
+      - postgres_host=postgres
+      - test_api_url=api
+    # чтобы не передеплоить каждый раз контейнер, если были изменения в коде
+    volumes:
+      - ./src:/src
+      - ./tests:/tests
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
