--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,22 @@ services:
           cpus: '0.25'
           memory: 128M
 
+  redis:
+    image: redis:latest
+    volumes:
+      - redis-data:/opt/app/redis/data
+    ports:
+      - "6379:6379"
+    restart: on-failure
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
+
   # api container
   api:
     build:
@@ -29,15 +45,17 @@ services:
       dockerfile: docker/Dockerfile
     depends_on:
       - postgres
+      - redis
     env_file:
       - ./.env
     environment:
       - postgres_host=postgres
+      - app_redis_url=redis
     # чтобы не передеплоить каждый раз контейнер, если были изменения в коде
     volumes:
       - ./src:/src
-    # ports:
-    #   - "8000:8000"
+    ports:
+      - "8000:8000"
     deploy:
       resources:
         limits:
