--- a/docker-compose-test.yaml
+++ b/docker-compose-test.yaml
@@ -36,6 +36,29 @@ services:
           cpus: '0.25'
           memory: 128M
 
+  redis-messagebus:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile-redis-mbus
+    depends_on:
+      - redis
+    env_file:
+      - ./.env
+    environment:
+      - postgres_host=postgres
+      - app_redis_url=redis
+    volumes:
+      - ./src:/src
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
+
+
   # api container
   api:
     build:
@@ -49,7 +72,6 @@ services:
     environment:
       - postgres_host=postgres
       - app_redis_url=redis
-    # чтобы не передеплоить каждый раз контейнер, если были изменения в коде
     volumes:
       - ./src:/src
     ports:
@@ -76,7 +98,6 @@ services:
       - postgres_host=postgres
       - app_api_url=api
       - app_redis_url=redis
-    # чтобы не передеплоить каждый раз контейнер, если были изменения в коде
     volumes:
       - ./src:/src
       - ./tests:/tests
